Adds some clarifications to the project
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1405 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/project.tex
+++ b/project/project.tex
@@ -247,31 +247,42 @@ kan besvaras ska ges.
 
 Den färdiga rapporten i PDF-format tillsammans med källkod lämnas in 
 i inlämningslådan i lärplattformen.
+Ladda upp PDF-filen för sig och den komprimerade källkoden för sig.
+
 Omfattningen bör vara omkring sju (7) sidor text, \emph{utöver} detta 
 tillkommer titel, sammanfattning (abstract), innehållsförteckning och 
 referenslista.
 Rapportens förstasida ska ha titel och författare med e-postadress\footnote{%
   Ett tips är att använda kommandot \texttt{\textbackslash footnote}.
 }, datum och sammanfattning (abstract).
-Därefter följer innehållet direkt, se den bifogade rapportmallen för ett 
-exempel.
+Därefter följer innehållsförteckning och innehållet direkt, se den bifogade 
+exempelrapporten.
 
 Utöver detta föreligger följande krav:
 \begin{itemize}
   \item Rapporten ska vara typsatt med LaTeX, använd dokumentklassen article.
     Typsnittstorlek och marginaler ska vara LaTeX:s standardinställningar.
   \item Rapporten ska ha minst en figur eller tabell.
+    Figurerna ska placeras av LaTeX i den övre eller nedre delen av sidan, 
+    alternativt på en ''page of floats''.
   \item Rapportens referenser ska göras med diverse \texttt{\textbackslash 
     cite}-kommandon tillsammans med en BibTeX-databas med alla referenser.
-    Ett tips är att använda kursens BibTeX-databas.
+    Ett tips är att använda kursens BibTeX-databas\footnote{%
+      Du finner kursens BibTeX-databas på URL 
+      \url{http://ver.miun.se/courses/itgrund/literature.bib}.
+    }.
   \item Rapportens studie ska innehålla minst en matematisk formel.
   \item Rapportens disposition ska följa en akademisk rapport och den ska vara 
     skriven på formell akademisk svenska eller engelska.
 \end{itemize}
 
 Rapporten presenteras även muntligen vid tillfälle för helklass, omfattning på 
-presentationen är 14--15 minuter.
+presentationen är 10 minuter.
+Efter 10 minuter blir du avbruten och du får göra din presentation vid senare 
+tillfälle.
 Slides är obligatoriskt för godkänd presentation.
+Du måste även ha webbkamera och giltig legitimation vid 
+presentationstillfället.
 
 \subsection{Betygskriterier}
 
