Slight clarification of project hand-in instructions
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1513 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/project.tex
+++ b/project/project.tex
@@ -247,7 +247,8 @@ kan besvaras ska ges.
 
 Den färdiga rapporten i PDF-format tillsammans med källkod lämnas in 
 i inlämningslådan i lärplattformen.
-Ladda upp PDF-filen för sig och den komprimerade källkoden för sig.
+Ladda upp PDF-filen för sig och den komprimerade källkoden med alla figurer 
+etc.\ för sig.
 
 Omfattningen bör vara omkring sju (7) sidor text, \emph{utöver} detta 
 tillkommer titel, sammanfattning (abstract), innehållsförteckning och 
