Adds example report
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1593 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -357,3 +357,12 @@
   month={sep},
   URL={http://www.ieee.org/documents/ieeecitationref.pdf},
 }
+@article{Shannon1948amt,
+  author={Shannon, C. E.},
+  title={A Mathematical Theory of Communication},
+  journal={The Bell System Technical Journal},
+  volume={27},
+  pages={379--423, 623--656},
+  month={jul, oct},
+  year={1948},
+}
