Adds assignment on presentations in itgrund
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1905 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -1,149 +1,149 @@
 @misc{Ekeroot2007dfal,
-	author={Ekeroot, Per},
-	title={Databas f{\"o}r anst{\"a}llda : {Databas i OpenOffice Base}},
-	year={2007},
-	publisher={Mittuniversitetet},
-	address={{\"O}stersund},
-	note={Bifogad i WebCT},
+  author={Ekeroot, Per},
+  title={Databas f{\"o}r anst{\"a}llda : {Databas i OpenOffice Base}},
+  year={2007},
+  publisher={Mittuniversitetet},
+  address={{\"O}stersund},
+  note={Bifogad i WebCT},
 }
 @misc{Ekeroot2007dfam,
-	author={Ekeroot, Per},
-	title={Databas f{\"o}r anst{\"a}llda : {Databas i Microsoft Access}},
-	year={2007},
-	publisher={Mittuniversitetet},
-	address={{\"O}stersund},
-	note={Bifogad i WebCT},
+  author={Ekeroot, Per},
+  title={Databas f{\"o}r anst{\"a}llda : {Databas i Microsoft Access}},
+  year={2007},
+  publisher={Mittuniversitetet},
+  address={{\"O}stersund},
+  note={Bifogad i WebCT},
 }
 @book{Brookshear2009csa,
-	author={Brookshear, J. Glenn}, 
-	title={Computer science : an overview}, 
-	publisher={Pearson Addison-Wesley}, 
-	address={Boston}, 
-	year={2009}, 
-	edition={10. ed.}, 
-	ISBN={978-0-321-54428-5 (pbk.) (International ed.)}, 
-	keywords={Datavetenskap}, 
+  author={Brookshear, J. Glenn},
+  title={Computer Science: An Overview},
+  publisher={Pearson Addison-Wesley},
+  address={Boston},
+  year={2009},
+  edition={10. ed.},
+  ISBN={978-0-321-54428-5 (pbk.) (International ed.)},
+  keywords={Datavetenskap},
 }
 @book{Capron1996ctf,
-	author={Capron, H. L. and Johnson, J. A.}, 
-	title={Computers : tools for an information age}, 
-	publisher={Pearson Education}, 
-	address={Upper Saddle River, New Jersey}, 
-	year={2004}, 
-	edition={8. ed.}, 
-	ISBN={0-13-122723-8}, 
+  author={Capron, H. L. and Johnson, J. A.}, 
+  title={Computers : tools for an information age}, 
+  publisher={Pearson Education}, 
+  address={Upper Saddle River, New Jersey}, 
+  year={2004}, 
+  edition={8. ed.}, 
+  ISBN={0-13-122723-8}, 
 }
 @misc{OWASP2010ot,
-	author={{The Open Web Application Security Project}},
-	title={{OWASP Top 10 -- 2010} : The Ten Most Critical Web Application
-		Security Risks},
-	year={2010},
-	month={apr},
-	URL={https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project},
+  author={{The Open Web Application Security Project}},
+  title={{OWASP Top 10 -- 2010} : The Ten Most Critical Web Application
+    Security Risks},
+  year={2010},
+  month={apr},
+  URL={https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project},
 }
 @article{Singel2011feh,
-	author={Singel, Ryan},
-	title={Facebook Enables {HTTPS} So You Can Share Without Being Hijacked},
-	year={2011},
-	journal={Wired},
-	URL={http://www.wired.com/threatlevel/2011/01/facebook-https/},
+  author={Singel, Ryan},
+  title={Facebook Enables {HTTPS} So You Can Share Without Being Hijacked},
+  year={2011},
+  journal={Wired},
+  URL={http://www.wired.com/threatlevel/2011/01/facebook-https/},
 }
 @misc{PTStgr,
-	author={{Post- och Telestyrelsen}},
-	title={Tolv goda r{\aa}d},
-	note={Internets{\"a}kerhet f{\"o}r hemmet},
-	URL={http://www.pts.se/sv/Internet/Internetsakerhet/For-hemmet/Tretton-goda-rad/},
+  author={{Post- och Telestyrelsen}},
+  title={Tolv goda r{\aa}d},
+  note={Internets{\"a}kerhet f{\"o}r hemmet},
+  URL={http://www.pts.se/sv/Internet/Internetsakerhet/For-hemmet/Tretton-goda-rad/},
 }
 @misc{Kamkar2010him,
-	author={Kamkar, Samy},
-	title={How {I} Met Your Girlfriend},
-	year={2010},
-	note={F{\"o}rel{\"a}sning, DefCon18. URL:
-		del 1 -- \url{http://www.youtube.com/watch?v=fEmO7wQKCMw},
-		del 2 -- \url{http://www.youtube.com/watch?v=2ctRfWnisSk},
-		del 3 -- \url{http://www.youtube.com/watch?v=vJtmZZGcR54}.},
+  author={Kamkar, Samy},
+  title={How {I} Met Your Girlfriend},
+  year={2010},
+  note={F{\"o}rel{\"a}sning, DefCon18. URL:
+    del 1 -- \url{http://www.youtube.com/watch?v=fEmO7wQKCMw},
+    del 2 -- \url{http://www.youtube.com/watch?v=2ctRfWnisSk},
+    del 3 -- \url{http://www.youtube.com/watch?v=vJtmZZGcR54}.},
 }
 @misc{Hunt2011abs,
-	author={Hunt, Troy},
-	title={A brief {Sony} password analysis},
-	year={2011},
-	month={jun},
-	URL={http://www.troyhunt.com/2011/06/brief-sony-password-analysis.html},
+  author={Hunt, Troy},
+  title={A brief {Sony} password analysis},
+  year={2011},
+  month={jun},
+  URL={http://www.troyhunt.com/2011/06/brief-sony-password-analysis.html},
 }
 @manual{RFC5735,
-	title={Special Use {IPv4} Addresses},
-	author={Cotton, M. and Vegoda, L.},
-	organization={{ICANN}},
-	publisher={{Internet Engineering Taskforce (IETF)}},
-	month={jan},
-	year={2010},
-	URL={https://tools.ietf.org/html/rfc5735},
+  title={Special Use {IPv4} Addresses},
+  author={Cotton, M. and Vegoda, L.},
+  organization={{ICANN}},
+  publisher={{Internet Engineering Taskforce (IETF)}},
+  month={jan},
+  year={2010},
+  URL={https://tools.ietf.org/html/rfc5735},
 }
 @manual{RFC791,
-	title={Internet Protocol: {DARPA} Internet Program Protocol Specification},
-	author={{Information Sciences Institute}},
-	organization={University of Southern California},
-	publisher={{Internet Engineering Taskforce (IETF)}},
-	month={sep},
-	year={1981},
-	URL={https://tools.ietf.org/html/rfc791},
+  title={Internet Protocol: {DARPA} Internet Program Protocol Specification},
+  author={{Information Sciences Institute}},
+  organization={University of Southern California},
+  publisher={{Internet Engineering Taskforce (IETF)}},
+  month={sep},
+  year={1981},
+  URL={https://tools.ietf.org/html/rfc791},
 }
 @manual{RFC2460,
-	title={Internet Protocol, Version 6 ({IPv6}) Specification},
-	author={Deering, S. and Hinden, R.},
-	organization={Cisco and Nokia},
-	publisher={{Internet Engineering Taskforce (IETF)}},
-	month={dec},
-	year={1998},
-	URL={https://tools.ietf.org/html/rfc2460},
+  title={Internet Protocol, Version 6 ({IPv6}) Specification},
+  author={Deering, S. and Hinden, R.},
+  organization={Cisco and Nokia},
+  publisher={{Internet Engineering Taskforce (IETF)}},
+  month={dec},
+  year={1998},
+  URL={https://tools.ietf.org/html/rfc2460},
 }
 @misc{Convergence,
-	title={Convergence},
-	month={oct},
-	year={2011},
-	URL={http://convergence.io},
+  title={Convergence},
+  month={oct},
+  year={2011},
+  URL={http://convergence.io},
 }
 @misc{UbuntuInstall,
-	author={{Ubuntu Community}},
-	title={{GraphicalInstall}},
-	year={2012},
-	URL={https://help.ubuntu.com/community/GraphicalInstall},
+  author={{Ubuntu Community}},
+  title={{GraphicalInstall}},
+  year={2012},
+  URL={https://help.ubuntu.com/community/GraphicalInstall},
 }
 @misc{UbuntuDesktop,
-	author={{Ubuntu Documentation Team}},
-	title={Ubuntu Desktop Guide},
-	year={2012},
-	URL={https://help.ubuntu.com/12.04/ubuntu-help/index.html},
+  author={{Ubuntu Documentation Team}},
+  title={Ubuntu Desktop Guide},
+  year={2012},
+  URL={https://help.ubuntu.com/12.04/ubuntu-help/index.html},
 }
 @misc{Bosk2012lui,
-	author={Bosk, Daniel and Franked, Lennart},
-	title={{\LaTeX} Usage Instructions},
-	year={2012},
-	URL={http://ver.miun.se/dokument/instruktioner/latex/windows.pdf},
+  author={Bosk, Daniel and Franked, Lennart},
+  title={{\LaTeX} Usage Instructions},
+  year={2012},
+  URL={http://ver.miun.se/dokument/instruktioner/latex/windows.pdf},
 }
 @misc{TUG2011jwi,
-	author={{\TeX\ Users Group}},
-	title={Just what is {\TeX}?},
-	year={2011},
-	URL={http://www.tug.org/whatis.html},
+  author={{\TeX\ Users Group}},
+  title={Just what is {\TeX}?},
+  year={2011},
+  URL={http://www.tug.org/whatis.html},
 }
 @misc{MiUn2012rft,
-	author={Mittuniversitetet},
-	title={Raportmall för tekniska rapporter},
-	year={2012},
+  author={Mittuniversitetet},
+  title={Raportmall för tekniska rapporter},
+  year={2012},
   URL={http://ver.miun.se/latex/miunthes/thesis/thesis.pdf},
 }
 @misc{Wikibooks2012l,
-	author={Wikibooks},
-	title={{\LaTeX}},
-	year={2012},
-	URL={https://en.wikibooks.org/wiki/LaTeX/},
+  author={Wikibooks},
+  title={{\LaTeX}},
+  year={2012},
+  URL={https://en.wikibooks.org/wiki/LaTeX/},
 }
 @misc{Oetiker2011lshort,
   author={Oetiker, Tobias and
     Partl, Hubert and
-    Hyna, Irene and
-    Schlegl, Elisabeth},
+        Hyna, Irene and
+        Schlegl, Elisabeth},
   title={The Not So Short Introduction to {\LaTeXe}: or {\LaTeXe} in 157 
     minutes},
   year={2011},
@@ -165,119 +165,120 @@
   URL={http://mirrors.ctan.org/macros/latex/contrib/memoir/memman.pdf},
 }
 @misc{Honan2012haa,
-	author={Honan, Mat},
-	title={How {Apple} and {Amazon} Security Flaws Led to My Epic Hacking},
-	year={2012},
-	month={aug},
-	URL={http://www.wired.com/threatlevel/2012/08/mat-hacked/},
+  author={Honan, Mat},
+  title={How {Apple} and {Amazon} Security Flaws Led to My Epic Hacking},
+  year={2012},
+  month={aug},
+  URL={http://www.wired.com/threatlevel/2012/08/mat-hacked/},
 }
 @misc{Zetter2012hnt,
-	author={Zetter, Kim},
-	title={How Not to Become {Mat Honan}: A Short Primer on Online Security},
-	year={2012},
-	month={aug},
-	URL={http://www.wired.com/threatlevel/2012/08/how-not-to-become-mat-honan/},
+  author={Zetter, Kim},
+  title={How Not to Become {Mat Honan}: A Short Primer on Online Security},
+  year={2012},
+  month={aug},
+  URL={http://www.wired.com/threatlevel/2012/08/how-not-to-become-mat-honan/},
 }
 @misc{Brading2012tlw,
-	author={Brading, Anna},
-	title={Twitter + location = WeKnowYourHouse},
-	year={2012},
-	month={aug},
-	URL={http://nakedsecurity.sophos.com/2012/08/15/twitter-location-weknowyourhouse/},
+  author={Brading, Anna},
+  title={Twitter + location = WeKnowYourHouse},
+  year={2012},
+  month={aug},
+  URL={http://nakedsecurity.sophos.com/2012/08/15/twitter-location-weknowyourhouse/},
 }
 @misc{Cherry2012fky,
-	author={Cherry, Steven},
-	title={Facebook Knows Your Friends -- Even if They're Not on {Facebook}},
-	year={2012},
-	month={may},
-	URL={http://spectrum.ieee.org/podcast/computing/networks/facebook-knows-your-friendseven-if-theyre-not-on-facebook/},
+  author={Cherry, Steven},
+  title={Facebook Knows Your Friends -- Even if They're Not on {Facebook}},
+  year={2012},
+  month={may},
+  URL={http://spectrum.ieee.org/podcast/computing/networks/facebook-knows-your-friendseven-if-theyre-not-on-facebook/},
 }
 @misc{Cluley2012twp,
-	author={Cluley, Graham},
-	title={The worst passwords you could ever choose exposed by {Yahoo Voices}
-		hack},
-	year={2012},
-	month={jul},
-	URL={http://nakedsecurity.sophos.com/2012/07/13/yahoo-voices-poor-passwords/},
+  author={Cluley, Graham},
+  title={The worst passwords you could ever choose exposed by {Yahoo Voices}
+    hack},
+  year={2012},
+  month={jul},
+  URL={http://nakedsecurity.sophos.com/2012/07/13/yahoo-voices-poor-passwords/},
 }
 @book{Brookshear2012csa,
-	author={Brookshear, J. Glenn},
-	title={Computer science : an overview},
-	publisher={Pearson Addison-Wesley},
-	address={Boston},
-	year={2012},
-	edition={11th international},
-	ISBN={978-0-273-75139-7},
-	keywords={Datavetenskap},
+  author={Brookshear, J. Glenn},
+  title={Computer Science: An Overview},
+  publisher={Pearson Addison-Wesley},
+  address={Boston},
+  year={2012},
+  edition={11, internationella},
+  ISBN={978-0-273-75139-7},
+  keywords={Datavetenskap},
 }
 @misc{Oberheide2010bao,
-	author={Oberheide, Jon},
-	title={Brief analysis of the Gawker password dump},
-	year={2010},
-	month={dec},
-	URL={https://blog.duosecurity.com/2010/12/brief-analysis-of-the-gawker-password-dump/}
+  author={Oberheide, Jon},
+  title={Brief analysis of the Gawker password dump},
+  year={2010},
+  month={dec},
+  URL={https://blog.duosecurity.com/2010/12/brief-analysis-of-the-gawker-password-dump/}
 }
 @incollection{Bosk2011m1c,
-	author={Bosk, Daniel},
-	title={Matematik 1c},
-	booktitle={En formalisering av matematiken i svensk gymnasieundervisning},
+  author={Bosk, Daniel},
+  title={Matematik 1c},
+  booktitle={En formalisering av matematiken i svensk gymnasieundervisning},
   chapter={Bilaga B},
-	publisher={Kungl. Tekniska högskolan},
-	address={Stockholm},
-	year={2011},
-  URL={http://www.bosk.se/masters-thesis/kompendium.pdf},
+  series={Trita-MAT. MA, ISSN 1401-2278},
+  publisher={Institutionen för matematik, Kungl. Tekniska högskolan},
+  address={Stockholm},
+  year={2011},
+  URL={http://kth.diva-portal.org/smash/get/diva2:509959/ATTACHMENT01.pdf},
 }
 @manual{bsdman,
-	organization={OpenBSD},
-	title={OpenBSD Reference Manual},
-	note={OpenBSD 5.0},
-	URL={http://www.openbsd.org/cgi-bin/man.cgi?manpath=OpenBSD+5.0&arch=i386&format=html},
+  organization={OpenBSD},
+  title={OpenBSD Reference Manual},
+  note={OpenBSD 5.0},
+  URL={http://www.openbsd.org/cgi-bin/man.cgi?manpath=OpenBSD+5.0&arch=i386&format=html},
 }
 @manual{linuxman,
-	organization={Linux},
-	title={Linux Programmer's Manual},
-	URL={http://unixhelp.ed.ac.uk/CGI/man-cgi},
+  organization={Linux},
+  title={Linux Programmer's Manual},
+  URL={http://unixhelp.ed.ac.uk/CGI/man-cgi},
 }
 @misc{Bosk2010libris,
-	author={Bosk, Daniel},
-	title={libris: a script for fetching reference information},
-	year={2010},
-	URL={https://apachepersonal.miun.se/~danbos/pub/libris},
+  author={Bosk, Daniel},
+  title={libris: a script for fetching reference information},
+  year={2010},
+  URL={https://apachepersonal.miun.se/~danbos/pub/libris},
 }
 @misc{Bosk2012rm,
-	author={Bosk, Daniel},
-	title={rm: a script to delay removal of files},
-	year={2012},
-	URL={https://apachepersonal.miun.se/~danbos/pub/rm},
+  author={Bosk, Daniel},
+  title={rm: a script to delay removal of files},
+  year={2012},
+  URL={https://apachepersonal.miun.se/~danbos/pub/rm},
 }
 @book{Knuth1997tao,
-	author={Knuth, Donald Ervin},
-	title={The art of computer programming},
-	publisher={Addison-Wesley},
-	address={Reading, Mass.},
-	year={1997},
-	edition={3},
-	ISBN={0-201-48541-9},
+  author={Knuth, Donald Ervin},
+  title={The art of computer programming},
+  publisher={Addison-Wesley},
+  address={Reading, Mass.},
+  year={1997},
+  edition={3},
+  ISBN={0-201-48541-9},
 }
 @misc{TUG2012tsc,
-	author={{TeX Users Group}},
-	title={The TeX showcase},
-	URL={http://www.tug.org/texshowcase/},
-	note={Hämtad den 27 september 2012},
+  author={{TeX Users Group}},
+  title={The TeX showcase},
+  URL={http://www.tug.org/texshowcase/},
+  note={Hämtad den 27 september 2012},
 }
 @misc{Bosk2012etr,
-	author={Bosk, Daniel},
-	title={En teknisk rapport : En anpassning av rapportmallen för LibreOffice 
-		till dokumentklassen för {\LaTeX}},
+  author={Bosk, Daniel},
+  title={En teknisk rapport : En anpassning av rapportmallen för LibreOffice 
+    till dokumentklassen för {\LaTeX}},
   year={2012},
   URL={http://ver.miun.se/latex/miunthes/thesis/thesis.pdf},
 }
 @misc{LucksMD5,
-	author={Daum, Magnus and Lucks, Stefan},
+  author={Daum, Magnus and Lucks, Stefan},
   title={Hash Collisions (The Poisoned Mesage Attack): ''The Story of {Alice} 
     and her Boss''},
-	note={Hämtat 10 oktober 2012},
-	URL={http://th.informatik.uni-mannheim.de/people/lucks/HashCollisions/},
+  note={Hämtat 10 oktober 2012},
+  URL={http://th.informatik.uni-mannheim.de/people/lucks/HashCollisions/},
 }
 @book{nemeth2011ual,
   author={Evi Nemeth and Garth Snyder and Trent R. Hein and Ben Whaley},
@@ -301,8 +302,8 @@
 }
 @misc{ubuntuinstall,
   organization={Canonical},
-	title={Ubuntu Server},
-	URL={http://www.ubuntu.com/download/server},
+  title={Ubuntu Server},
+  URL={http://www.ubuntu.com/download/server},
 }
 @misc{iproute2,
   title={Oracle VM VirtualBox},
@@ -365,4 +366,34 @@
   pages={379--423, 623--656},
   month={jul, oct},
   year={1948},
+}
+@book{Silberschatz2013osc,
+  author={Silberschatz, Abraham and Galvin, Peter Baer and Gagne, Greg},
+  title={Operating System Concepts},
+  publisher={John Wiley {\&} Sons Inc},
+  address={Hoboken, N.J.},
+  year={2013},
+  edition={9},
+  keywords={Operativsystem},
+  key={Silb13},
+}
+@book{Silberschatz2013intl,
+  author={Silberschatz, Abraham and Galvin, Peter Baer and Gagne, Greg},
+  title={Operating System Concepts},
+  publisher={John Wiley {\&} Sons Inc},
+  address={Hoboken, N.J.},
+  year={2013},
+  edition={9},
+  keywords={Operativsystem},
+  key={Silb13},
+  note={International Student Version},
+}
+@manual{beameruserguide,
+  author={Till Tantau and
+    Joseph Wright and
+    Vedran Miletić},
+  title={The BEAMER class: User Guide for version 3.24},
+  year={2012},
+  month={nov},
+  URL={http://mirrors.ctan.org/macros/latex/contrib/beamer/doc/beameruserguide.pdf},
 }
