--- a/lectures/arch/literature.tex
+++ b/lectures/arch/literature.tex
@@ -1,4 +1,16 @@
 % $Id$
 Föreläsningen behandlar innehållet i kapitlen 2 och 
-3 i \cite{Brookshear2012csa}.
-Det rekommenderas att du har läst igenom materialet innan föreläsningen.
+3 i \citetitle{Brookshear2012csa} \cite{Brookshear2012csa} samt kapitel 1 och 
+2 i \citetitle{Silberschatz2013osc} 
+\cite{Silberschatz2013osc,Silberschatz2013intl}.
+Innehållet behandlar datamanipulering, datorarkitektur, programexekvering och 
+operativsystem.
+
+Datamanipulering är en fortsättning av datarepresentationen.
+Här behandlas de operationer som är möjliga att utföra på datat och hur de är 
+konstruerade genom hårdvaran.
+
+Datorarkitektur behandlar systemets struktur, hur de olika hårdvarudelarna 
+i ett datorsystem förhåller sig till varandra.
+I samband med detta behandlas även hur hårdvaran kan exekvera program samt 
+huvudprogrammet som körs i ett datorsystem -- operativsystemet.
