--- a/lectures/datarep/literature.tex
+++ b/lectures/datarep/literature.tex
@@ -1,6 +1,15 @@
 % $Id$
 Föreläsningen tar upp kapitel 1 ''Data Storage'' i \citep{Brookshear2012csa}, 
-det rekommenderas att du har läst kapitlet innan föreläsningen.
+som handlar om fysisk lagring av data på olika media.
 
 Innehållet kommer även att kompletteras med delar från kapitlen 2 och 
-6 i \cite{Bosk2011m1c}.
+6 i \cite{Bosk2011m1c} som förklarar den logiska representationen av data.
+Kapitel 2 tar logik och bevis.
+Då en dator är strikt baserad på logiska operationer är detta en viktig grund.
+Bevis är helt enkelt tillämpning av de logiska reglerna och detta behövs för 
+att förstå bevisen i kapitel 6.
+
+Kapitel 6 täcker talsystem och förklarar varför vi kan använda datorns logiska 
+system för att räkna med godtyckliga tal.
+Logiska operationer samt representation och beräkningar av tal är vad en dator 
+gör när program körs.
