--- a/lectures/intro/literature.tex
+++ b/lectures/intro/literature.tex
@@ -5,3 +5,6 @@ Den motsvarar således att läsa igenom allt kursmaterial och lite därtill.
 
 Utöver detta täcks även kapitel 0 i \citetitle{Brookshear2012csa} 
 \cite{Brookshear2012csa}.
+Kapitlet introducerar ämnena datateknik och datalogi (datavetenskap).
+Det ger även en historisk överblick av området vilket är bra för att förstå 
+varför området är som det är och dess framtida utveckling.
