--- a/lectures/python/literature.tex
+++ b/lectures/python/literature.tex
@@ -1,4 +1,18 @@
 % $Id$
-Föreläsningen behandlar kapitel 5, 6 och 8 i \cite{Brookshear2012csa}.
-Det bör ha läst dessa innan föreläsningen.
-Utöver detta tillkommer även avsnitten 2--6 i \cite{pythonkramaren1}.
+Programmering och algoritmer är en central del inom datateknik och datalogi.
+Dels behövs programmering för att kunna använda ett datorsystem från första 
+början.
+Men även när det finns program som går att använda utan 
+programmeringskunskaper, kommer programmering att underlätta många uppgifter 
+avsevärt.
+
+Studiet av algoritmer är också centralt inom området.
+Algoritmer implementeras i kod med programmering, så en algoritm handlar om hur 
+någonting kan utföras systematiskt och (gärna) så effektivt som möjligt.
+Dessa rör alltifrån sortering av namn till routingalgoritmer som ger effektiva 
+nätverk.
+
+Föreläsningarna behandlar kapitel 5, 6 och 8 i \citetitle{Brookshear2012csa} 
+\cite{Brookshear2012csa}.
+Utöver detta tillkommer även avsnitten 2--6 i \citetitle{pythonkramaren1} 
+\cite{pythonkramaren1}.
