--- a/lectures/report/literature.tex
+++ b/lectures/report/literature.tex
@@ -1,3 +1,6 @@
 % $Id$
 Föreläsningen behandlar grundläggande rapportskrivning, motsvarande innehållet 
-i \cite{MiUn2012rft}, och tar dessutom upp presentationsteknik.
+i \citetitle{MiUn2012rft} \cite{MiUn2012rft}, och tar dessutom upp 
+presentationsteknik.
+Materialet från kapitel 3, 4 och 5 i \citetitle{beameruserguide} 
+\cite{beameruserguide} berörs också.
