--- a/lectures/shell/literature.tex
+++ b/lectures/shell/literature.tex
@@ -1,2 +1,9 @@
 % $Id$
-Föreläsningen förutsätter att du läst kapitel 3 i \cite{Brookshear2012csa}.
+Föreläsningen behandlar den UNIX-lika terminalen.
+Som framgått i datateknikens historia har terminalen haft en betydande roll, 
+och det är faktiskt så att det fortfarande är få gränssnitt som överträffar 
+terminalens effektivitet.
+
+Den literatur som täcker detta är kapitel 1, 12.1, 12.5-12.7 och 12.10 
+i \citetitle{nemeth2011ual} \cite{nemeth2011ual} och självklart tillhörande 
+manualsidor.
