--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -16,7 +16,7 @@
 \svnInfo $Id$
 
 \title{Den fullständiga studiehandledningen för\\
-  DT001G Informationsteknologi grundkurs}
+DT001G Informationsteknologi grundkurs}
 \author{
   Daniel Bosk\footnote{%
     Detta verk är tillgängliggjort under licensen Creative Commons 
@@ -43,11 +43,11 @@ Kursen ger även en introduktion till rapportskrivande och presentationer.
 
 Mer specifikt, efter genomgången kurs ska du kunna:
 \begin{itemize}
-  \input{inst-aim.tex}
-  \input{term-aim.tex}
-  \input{pylab-aim.tex}
-  \input{computer-aim.tex}
-  \input{project-aim.tex}
+    \input{inst-aim.tex}
+    \input{term-aim.tex}
+    \input{pylab-aim.tex}
+    \input{computer-aim.tex}
+    \input{project-aim.tex}
 \end{itemize}
 
 
@@ -67,10 +67,10 @@ Det går att använda tidigare upplagor av boken, kapitlen som behandlas i kurse
 utgår från den senaste upplagan \citep{Brookshear2012csa} och de behandlar 
 följande områden:
 \begin{itemize}
-	\item Kapitel 0: introduktion och historia,
-	\item kapitel 1: datalagring och -representation,
-	\item kapitel 2: datamanipulering, datorarkitektur, programexekvering,
-	\item kapitel 3: operativsystem,
+  \item Kapitel 0: introduktion och historia,
+  \item kapitel 1: datalagring och -representation,
+  \item kapitel 2: datamanipulering, datorarkitektur, programexekvering,
+  \item kapitel 3: operativsystem,
   \item kapitel 5: algoritmer,
   \item avsnitten 6.1--6.4: programspråk och programmering, samt
   \item avsnitten 9.1 och 9.2: databaser.
@@ -95,54 +95,66 @@ Det är naturligtvis valfritt att följa detta schema sånär som på slutdatum 
 kursens uppgifter och när föreläsningarna ges.
 Läsanvisningar för respektive moment följer i kommande avsnitt.
 Undervisningen förutsätter att du följer dessa riktlinjer.
+Det rekommenderas att du läser igenom materialet innan de lärarledda 
+tillfällena, så att du kan ta upp dina frågor med läraren.
 
 \begin{table}
-	\centering
+  \centering
   \begin{tabular}{cp{9cm}}
     \toprule
-		\textbf{Kursvecka}	& \textbf{Arbete} \\
+    \textbf{Kursvecka}	& \textbf{Arbete} \\
     \midrule
-    1	& Kursstart/Föreläsning introduktion \\
-      & Laboration L0 Installation \\
+    1
+    & Kursstart/Föreläsning introduktion \\
+    & L0 Installation \\
     \midrule
-    2 & Föreläsning om datarepresentation \\
-      & Föreläsning om datorarkitektur \\
-      & Handledning \\
+    2
+    & Föreläsning om datarepresentation \\
+    & Föreläsning om datorarkitektur \\
     \midrule
-    3 & Föreläsning om den UNIX-lika terminalen \\
-      & Övning: den UNIX-lika terminalen \\
-      & Laboration L1 Terminalen \\
-      & Handledning \\
+    3
+    & Föreläsning om den UNIX-lika terminalen \\
+    & Övning: den UNIX-lika terminalen \\
+    & L1 Terminalen \\
+    & Handledning \\
     \midrule
-    4 & Föreläsning om programmering med Python, del 1 \\
-      & Övning: Python \\
-      & Laboration L2 Programmering med Python \\
-      & Föreläsning om programmering med Python, del 2 \\
-      & Övning: Python \\
-      & Handledning \\
+    4
+    & Föreläsning om programmering med Python, del 1 \\
+    & Övning: Python \\
+    & Handledning \\
     \midrule
-    5 & Föreläsning om LaTeX \\
-      & Övning: LaTeX \\
-      & Laboration L3 Datorn \\
-      & Föreläsning om rapportskrivning och presentationsteknik \\
-      & Handledning \\
+    5
+    & Föreläsning om programmering med Python, del 2 \\
+    & Övning: Python \\
+    & L2 Programmering med Python \\
+    & Handledning \\
     \midrule
-    6 & Projekt \\
-      & Handledning \\
+    6
+    & Handledning \\
     \midrule
-    7 & Handledning \\
+    7
+    & Föreläsning om LaTeX \\
+    & Övning: LaTeX \\
+    & Föreläsning om rapportskrivning och presentationsteknik \\
+    & L3 Datorn \\
+    & L4 Presentationsteknik \\
+    & Handledning \\
     \midrule
-    8 & Handledning \\
+    8
+    & Handledning \\
     \midrule
-    9 & Handledning \\
+    9
+    & Handledning \\
+    & Presentation L4 \\
     \midrule
-    10  & Redovisning av projekt \\
+    10
+    & Tentamen \\
     \bottomrule
   \end{tabular}
   \caption{En sammanställning av kursens moment och när de kommer att 
-  genomföras.
+    genomföras.
   Tiden är anpassad efter studietakt om halvfart.}
-	\label{tbl:schema}
+  \label{tbl:schema}
 \end{table}
 
 \subsection{Introduktionsföreläsning}
@@ -163,48 +175,58 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 \subsection{Laboration L1 Terminalen}
 \input{term-lit.tex}
 
-\subsection{Föreläsning om programmering med Python}
+\subsection{Föreläsningar om programmering med Python}
 \input{python-lit.tex}
 
 \subsection{Laboration L2 Programmering med Python}
 \input{pylab-lit.tex}
 
-\subsection{Föreläsning om LaTeX}
+\subsection{Föreläsning om \LaTeX}
 \input{tex-lit.tex}
-
-\subsection{Laboration L3 Datorn}
-\input{computer-lit.tex}
 
 \subsection{Föreläsning om rapportskrivning och presentationsteknik}
 \input{report-lit.tex}
 
-\subsection{Projektet}
-Projektet syftar till att genomföra en mindre studie som fördjupning inom 
-området datateknik.
-Det tillkommer därför delvis valfri litteratur i detta moment.
+\subsection{Laboration L3 Datorn}
+\input{computer-lit.tex}
+
+\subsection{Laboration L4 Presentationsteknik}
+\input{present-lit.tex}
+
+\subsection{Tentamen}
+Tentamen i denna kurs examinerar den teori som behandlats, det vill säga 
+samtlig litteratur som behandlats under kursens gång.
 
 
 \section{Examination}
 \label{sec:exam}
-Kursen examineras med med laborationer och ett projekt, se lydelsen för 
-respektive uppgift för detaljer.
-Projektet examineras genom en skriftlig rapport och en muntlig presentation.
-Alla laborationer och den muntliga presentationen betygsätts \emph{pass (P)} 
-för godkänt eller \emph{fail (F)} för underkänt.
-Projektrapporten betygsätts A--E för godkänt eller F--Fx för underkänt.
+Kursen examineras med med inlämningsuppgifter (laborationer), se lydelserna för 
+detaljer, och en skriftlig salstentamen.
+
+Den första uppgiften L0 rapporteras in som moment I010 i ladok.
+Övriga laborationer L\{1,2,3\} rapporteras in gemensamt som moment I110 
+i ladok, det vill säga samtliga måste vara godkända innan detta kan ske, och 
+detta ger 3.5 högskolepoäng.
+Alla dessa uppgifter betygsätts godkänt eller underkänt.
+
+Den muntliga presentationen rapporteras in som P110, detta ger en (1) 
+högskolepoäng, och betygsätts godkänt eller underkänt.
+
+Den avslutande salstentamen betygsätts med hela betygskalan, A-E för godkänt 
+och F eller Fx för underkänt.
+Tentamen rapporteras som moment T110 i ladok och ger tre (3) högskolepoäng.
 
 
 \section{Vad händer om jag ej blir klar i tid?}
 \label{sec:late}
 Slutdatumena på denna kurs är av yttersta vikt.
-Du måste ha genomfört introduktionsuppgiften inom dess givna slutdatum, om du 
-inte gör detta kommer du att avregistreras från kursen och din plats kommer att 
-ställas till förfogande för andra sökande.
+Du måste ha genomfört introduktionsuppgiften L0 inom dess givna slutdatum, om 
+du inte gör detta kommer du att avregistreras från kursen och din plats kommer 
+att ställas till förfogande för andra sökande.
 
 Vad gäller den övriga examinationen på kursen kommer det för redovisningar att 
-ges ett redovisningstillfälle under kursens gång, detta kommer att vara under 
-ordinarie tentamensvecka.
-Därefter ges ytterligare två redovisningstillfällen, dessa förläggs inom ett 
+ges ett presentationstillfälle under kursens gång.
+Därefter ges ytterligare två presentationstillfällen, dessa förläggs inom ett 
 år.
 Alla dessa tillfällen kommer att finnas i kursens schema (i studentportalen).
 
@@ -219,6 +241,13 @@ kursens gång, senast i samband med slutdatum för inlämning, därefter
 ytterligare två gånger i de kommande omtentamensperioderna.
 Totalt erbjuds tre försök per år.
 Därefter hänvisas till nästa kursomgång.
+
+För skriftlig salstentamen gäller att du måste anmäla dig i förväg.
+Du kan ansöka om att skriva tentamen på annan ort, detta måste du dock ansöka 
+om i god tid och du måste ordna plats själv.
+Tentamen skrivs endast under de tider som finns i schemat, inga undantag kan 
+göras.
+Se instruktionerna i studentportalen för vidare detaljer.
 
 Ingen handledning planeras efter kursens slut, det vill säga efter det sista 
 schemalagda handledningstillfället.
