--- a/labs/python/literature.tex
+++ b/labs/python/literature.tex
@@ -1,3 +1,4 @@
 Innan du påbörjar laborationen ska du ha läst kapitel 1, 2, 5 och 6.1--6.4 
 i \cite{Brookshear2012csa} samt avsnitt 2--6 i \citetitle{pythonkramaren1} 
 \cite{pythonkramaren1}.
+Du bör även ha gjort flertalet övningar i litteraturen.
