--- a/lectures/latex/literature.tex
+++ b/lectures/latex/literature.tex
@@ -1,6 +1,14 @@
 % $Id$
+Föreläsningen introducerar grundläggande LaTeX, det som behövs för akademisk 
+rapportskrivning.
+LaTeX är ett system för typsättning av dokument, det vill säga att dokumentet 
+framställs på ett sätt som drar nytta av kunskaperna från århundraden av 
+boktryckning -- hur texten blir så behaglig och effektiv som möjligt att läsa.
+(Detta till skillnad från vanliga ordbehandlare, se \citetitle{memdesign} 
+\cite{memdesign} för en diskussion om detta.)
+Andra fördelar är att det är enkelt att systematisera och fokus hamnar enbart 
+på innehållet, LaTeX sköter hur innehållet presenteras, numrera korrekt, 
+hantera referenser, etc.
+
 Inför föreläsningen bör du har läst kapitlen 1--3 
 i \citetitle{Oetiker2011lshort} \cite{Oetiker2011lshort}.
-Föreläsningen repeterar detta lite kort och tar därefter upp mer ingående 
-information, bland annat från \citetitle{memdesign} \cite{memdesign} och 
-\citetitle{memman} \cite{memman}.
