Removes printing the reading instructions in lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1908 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/arch/arch.tex
+++ b/lectures/arch/arch.tex
@@ -88,9 +88,9 @@
   % You might wish to add the option [pausesections]
 \end{frame}
 
-\begin{frame}
-  \input{literature.tex}
-\end{frame}
+%\begin{frame}
+%  \input{literature.tex}
+%\end{frame}
 
 
 % Since this a solution template for a generic talk, very little can
