Adds nocourse option, corrects ref style
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1910 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/internet/internet.tex
+++ b/labs/internet/internet.tex
@@ -1,6 +1,6 @@
 % $Id$
 % Author:	Daniel Bosk <daniel.bosk@miun.se>
-\documentclass[a4paper]{miunasgn}
+\documentclass[a4paper,nocourse]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
