--- a/labs/latex/latex.tex
+++ b/labs/latex/latex.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{miunasgn}
+\documentclass[a4paper,nocourse]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
@@ -7,7 +7,7 @@
 \usepackage{color}
 \usepackage{dtklogos}
 \usepackage[today,nofancy]{svninfo}
-\usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
 \addbibresource{literature.bib}
 \usepackage[varioref,prettyref,listings]{miunmisc}
 
