--- a/labs/python/python.tex
+++ b/labs/python/python.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{miunasgn}
+\documentclass[a4paper,nocourse]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{csquotes}
