--- a/labs/security/security.tex
+++ b/labs/security/security.tex
@@ -1,6 +1,6 @@
 % $Id$
 % Author:	Daniel Bosk <daniel.bosk@miun.se>
-\documentclass[a4paper]{miunasgn}
+\documentclass[a4paper,nocourse]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
